--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -122,6 +122,6 @@ http {
         server_name localhost 127.0.0.1 136.115.200.36 winmind.in www.winmind.in;
         
         # Redirect all HTTP requests to HTTPS
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
     }
 }
