--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -55,6 +55,7 @@ http {
         # Health check endpoint
         location /health/ {
             proxy_pass http://backend:8000/api/core/health/;
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -69,10 +70,12 @@ http {
         # API endpoints - proxy to Django backend
         location /api/ {
             proxy_pass http://backend:8000;
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+   
 
             # Enhanced timeout settings
             proxy_connect_timeout 30s;
@@ -91,6 +94,7 @@ http {
         # Admin panel
         location /admin/ {
             proxy_pass http://backend:8000;
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -100,6 +104,7 @@ http {
         # Proxy media files from backend
         location /media/ {
             proxy_pass http://backend:8000;
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
